added nuance, fixed storage, fixed tests
